k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-backend
  template:
    metadata:
      labels:
        app: react-backend
    spec:
      containers:
        - name: backend
          image: rhishikeshc12/crud-mern-backend
          ports:
            - containerPort: 8000
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: react-backend
  ports:
    - port: 8000
      targetPort: 8000
